buffed regenerate spell scaling value
buffed bolt spells base dmg a bit, increased their shoot speed
instant heal scaling value nerfed, mana cost increased, base value buffed. Should ensure a lvl 1 heal spell isn't that useful for a lvl 50 character.
normal items now show affixes in name by default but not uniques
map leave pearl now shows your current map info (velox's idea!)
2.4.13
fixed a nullpointer on unique rune generation
added more safety on packet sending
2.4.12
another try to fix group maps with help of jotac
2.4.11
fixed possible crash on start
torch doesnt add debuff if nothing was restored anymore
2.4.10
made gear modify station show info on why the item failed to be modified (if it's localized), hopefully this ends any and all confusion about currency items.
possible introduced some bugs, do test out the gear modify station please!
2.4.9
apparently the enchant workaround wasn't needed. shadow told me about a forge provided way to do it which was hidden inside an interface. Also, testing automated curseforge deployment with this build!
2.4.8
no longer re-register enchants. just change the type (ignore this)
2.4.7
made all registered spells use the 3d model by default, with option to disable it for addon makers
map sacrificing now activates a chat message to all players that recieve the map stats
increased unarmed energy cost 1 to 1.5
snowballs can no longer be used to effectively make melee weapons ranged with 0 cooldown. (this could lead to other issues. i plan to rework the whole system..)
added /givemapinfo command, i'd like to ask people who use group maps with their friends to use that command on themselves and then give me the server log file (should help me figure out the group map bug) 
2.4.6
updated to forge v45. You need that version or higher now.
update curios too.
attempt to fix group map issue
2.4.5
awaken runeword items now preview the runeword stats on the tooltip (not fully accurate but u get to know the stats at least)
2.4.4