@@ -5,6 +5,7 @@ buffed bolt spells base dmg a bit, increased their shoot speed
 instant heal scaling value nerfed, mana cost increased, base value buffed. Should ensure a lvl 1 heal spell isn't that useful for a lvl 50 character.
 normal items now show affixes in name by default but not uniques
 map leave pearl now shows your current map info (velox's idea!)
+added warning for crafting bags, to empty items inside
 2.4.13
 fixed a nullpointer on unique rune generation
 added more safety on packet sending
